--- a/_templates/default.twig
+++ b/_templates/default.twig
@@ -94,6 +94,15 @@
             color: #710909;
             color:#888;
         }
+
+        #build-buttons {
+            position: fixed;
+            top: 4px;
+            right: 4px;
+            max-width: 100%;
+            width: 100%;
+            text-align:right;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
