--- a/_templates/default.twig
+++ b/_templates/default.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Slender by alanpich</title>
+    <title>Slender; Slim, but with a bit more meat.</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,700,600' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Cutive+Mono|PT+Mono' rel='stylesheet' type='text/css'>
