--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -44,6 +44,7 @@
                 <li><a href="{{ url('configuration-loader/default-configuration.html') }}">Default Configuration</a></li>
                 <li><a href="{{ url('configuration-loader/service-configuration.html') }}">Services & Factories</a></li>
                 <li><a href="{{ url('configuration-loader/route-configuration.html') }}">Route Definitions</a></li>
+                <li><a href="{{ url('configuration-loader/route-middleware.html') }}">Route Middleware</a></li>
             </ul>
         </li>
         <li>
