--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -53,7 +53,7 @@
                 <li><a href="{{ url('modules/defining-a-module.html') }}">Defining a Module</a></li>
                 <li><a href="{{ url('modules/loading-modules.html') }}">Loading Modules</a></li>
                 <li><a href="{{ url('modules/module-config-file.html') }}">Module configuration</a></li>
-                <li><a href="{{ url('modules/example-module-config.html') }}">Config file</a></li>
+                <li><a href="{{ url('modules/example-module-config.html') }}">Example Config file</a></li>
                 <li><a href="{{ url('modules/module-hooks.html') }}">Module Invokables</a></li>
             </ul>
         </li>
