--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -1,4 +1,4 @@
-<h1>Slender</h1>
+<h1 style="font-size:3em">Slender</h1>
 <h3>Slim, but with a bit more meat.</h3>
 
 {# Travis & Packagist badges #}
