--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,255 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
-
-body {
-    padding:50px;
-    font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color:#777;
-    font-weight:300;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color:#222;
-    margin:0 0 20px;
-}
-
-p, ul, ol, table, pre, dl {
-    margin:0 0 20px;
-}
-
-h1, h2, h3 {
-    line-height:1.1;
-}
-
-h1 {
-    font-size:28px;
-}
-
-h2 {
-    color:#393939;
-}
-
-h3, h4, h5, h6 {
-    color:#494949;
-}
-
-a {
-    color:#39c;
-    font-weight:400;
-    text-decoration:none;
-}
-
-a small {
-    font-size:11px;
-    color:#777;
-    margin-top:-0.6em;
-    display:block;
-}
-
-.wrapper {
-    width:860px;
-    margin:0 auto;
-}
-
-blockquote {
-    border-left:1px solid #e5e5e5;
-    margin:0;
-    padding:0 0 0 20px;
-    font-style:italic;
-}
-
-code, pre {
-    font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-    color:#333;
-    font-size:12px;
-}
-
-pre {
-    padding:8px 15px;
-    background: #f8f8f8;
-    border-radius:5px;
-    border:1px solid #e5e5e5;
-    overflow-x: auto;
-}
-
-table {
-    width:100%;
-    border-collapse:collapse;
-}
-
-th, td {
-    text-align:left;
-    padding:5px 10px;
-    border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-    color:#444;
-    font-weight:700;
-}
-
-th {
-    color:#444;
-}
-
-img {
-    max-width:100%;
-}
-
-header {
-    width:270px;
-    float:left;
-    position:fixed;
-}
-
-header ul {
-    list-style:none;
-    height:40px;
-
-    padding:0;
-
-    background: #eee;
-    background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-    background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-    background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-    background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-    background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-
-    border-radius:5px;
-    border:1px solid #d2d2d2;
-    box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-    width:270px;
-}
-
-header li {
-    width:89px;
-    float:left;
-    border-right:1px solid #d2d2d2;
-    height:40px;
-}
-
-header ul a {
-    line-height:1;
-    font-size:11px;
-    color:#999;
-    display:block;
-    text-align:center;
-    padding-top:6px;
-    height:40px;
-}
-
-strong {
-    color:#222;
-    font-weight:700;
-}
-
-header ul li + li {
-    width:88px;
-    border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-    border-right:none;
-    width:89px;
-}
-
-header ul a strong {
-    font-size:14px;
-    display:block;
-    color:#222;
-}
-
-section {
-    width:500px;
-    float:right;
-    padding-bottom:50px;
-}
-
-small {
-    font-size:11px;
-}
-
-hr {
-    border:0;
-    background:#e5e5e5;
-    height:1px;
-    margin:0 0 20px;
-}
-
-footer {
-    width:270px;
-    float:left;
-    position:fixed;
-    bottom:50px;
-}
-
-@media print, screen and (max-width: 960px) {
-
-    div.wrapper {
-        width:auto;
-        margin:0;
-    }
-
-    header, section, footer {
-        float:none;
-        position:static;
-        width:auto;
-    }
-
-    header {
-        padding-right:320px;
-    }
-
-    section {
-        border:1px solid #e5e5e5;
-        border-width:1px 0;
-        padding:20px 0;
-        margin:0 0 20px;
-    }
-
-    header a small {
-        display:inline;
-    }
-
-    header ul {
-        position:absolute;
-        right:50px;
-        top:52px;
-    }
-}
-
-@media print, screen and (max-width: 720px) {
-    body {
-        word-wrap:break-word;
-    }
-
-    header {
-        padding:0;
-    }
-
-    header ul, header p.view {
-        position:static;
-    }
-
-    pre, code {
-        word-wrap:normal;
-    }
-}
-
-@media print, screen and (max-width: 480px) {
-    body {
-        padding:15px;
-    }
-
-    header ul {
-        display:none;
-    }
-}
-
-@media print {
-    body {
-        padding:0.4in;
-        font-size:12pt;
-        color:#444;
-    }
-}
+#sidebar{height:100%;padding-right:0;padding-top:20px}#sidebar .nav{width:95%}ul.tree,ul.tree ul{list-style:none;margin:0;padding:0}ul.tree li,ul.tree ul li{padding:0;margin:0}ul.tree{padding:0 1em;position:fixed;list-style:none}ul.tree ul{list-style:none;margin-left:1em}ul.tree li{line-height:1.8em}ul.tree li.folder ul{margin-top:0}ul.tree li.folder label{font-weight:normal;margin-left:-.8em;margin-bottom:0;cursor:pointer}ul.tree li.folder label:before{font-family:'FontAwesome';content:'\f0da';color:#000;margin-right:0.4em;opacity:0.5}ul.tree li.folder.open>label:before{content:'\f0d7';margin-left:-0.18em}#page{max-width:640px}#page h1{margin-bottom:.6em}#page h2{border-bottom:1px solid #eee;position:relative}#page h2:hover:after{font-family:'FontAwesome';font-size:.8em;content:'\f078';color:inherit;position:absolute;right:1em}#page h2.collapsed:hover:after{content:'\f053'}#page h3{margin-top:1.5em}.main{padding:20px}@media (min-width: 768px){.main{padding-right:40px;padding-left:40px}}.main .page-header{margin-top:0}#header .navbar-items-container{border-left:1px solid #ccc;border-bottom:1px solid #ccc;border-bottom-left-radius:2em;background-color:#fff;margin-right:-1.1em;padding-right:1.1em;padding-left:.8em}#header .navbar-brand a{color:#777 !important;font-weight:bold;padding-bottom:0}#header .navbar-brand a:hover{text-decoration:none}#header .navbar-brand i{color:#999;position:relative;top:-1px;margin-right:0.2em}body{padding-top:50px}body{padding-top:51px;width:100%;max-width:100%;overflow-x:hidden}.container{width:auto}.text-center{padding-top:20px}.col-xs-12{background-color:#fff}@media screen and (max-width: 767px){.row-offcanvas{position:relative;-webkit-transition:all 2s;-moz-transition:all 0.25s ease-out;transition:all 0.25s ease-out}.row-offcanvas-right .sidebar-offcanvas{right:-41.6%}.row-offcanvas-left .sidebar-offcanvas{left:-41.6%;-webkit-transition:left 2s ease-out}.row-offcanvas-right.active{right:41.6%}.row-offcanvas-left.active{left:41.6%}.sidebar-offcanvas{position:absolute;top:0;width:100%}}
