--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -5,7 +5,7 @@
 #page {
   max-width: 640px;
 
-
+  padding-bottom: 4em;
 
   h1 {
     margin-bottom:.6em;
@@ -15,24 +15,36 @@
     border-bottom: 1px solid #eee;
     position:relative;
 
-    &:hover:after {
+    &:before {
+      content: '\f054';
       font-family: 'FontAwesome';
-      font-size: .8em;
-      content: '\f078';
-      color: inherit;
-      position:absolute;
-      right: 1em;
+      font-size:0.6em;
+      line-height: 1.8em;
+      color: #ddd;
+      position: absolute;
+      left: -1em;
+      top: 1px;
     }
 
-    &.collapsed {
-      &:hover:after {
-        content: '\f053';
-      }
-    }
+  }
+
+  h2.collapsed {
+
   }
 
   h3 {
     margin-top:1.5em;
+  }
+
+
+  pre {
+    word-break: pre;
+    overflow-x: auto;
+
+    code {
+      overflow-x: auto;
+      display:block;
+    }
   }
 
 
