--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -4,6 +4,7 @@
 
 #sidebar {
   height: 100%;
+  max-width: 100%;
   padding-right: 0;
   padding-top: 20px;
 }
@@ -96,6 +97,45 @@ ul.tree li {
 }
 
 /* collapsed sidebar styles */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
 
+  #sidebar,
+  #sidebar * {
+    box-sizing: border-box;
+  }
+  #sidebar {
+//    width: 100%;
+    margin:0;
+    padding:0;
+    margin-left:-1em;
+
+
+    ul.tree {
+      padding: 0;
+      display:block;
+      width: auto;
+      max-width: 100%;
+      min-width: 100%;
+//      width: 100%;
+
+      ul {
+        padding: 0;
+        margin:0;
+      }
+
+      a {
+        border-bottom:1px solid #eee;
+        display:block;
+        margin: 0;
+        line-height: 3em;
+        padding:0;
+        max-width: 100%;
+      }
+
+      label {
+        line-height: 3em;
+        display:block;
+      }
+    }
+  }
 }
