--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,4 @@
+@import "off-canvas";
 @import "sidebar";
 @import "content";
 @import "header";
@@ -22,53 +23,6 @@ body {
 .text-center {
   padding-top: 20px;
 }
-.col-xs-12 {
-  background-color: #fff;
-}
-
-.page-container {
-//  overflow-x:hidden;
-}
-
-
-/* collapsed sidebar styles */
-@media screen and (max-width: 767px) {
-
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all 2s;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
-  }
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -41.6%;
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -41.6%;
-    -webkit-transition: left 2s ease-out;
-  }
-  .row-offcanvas-right.active {
-    right: 41.6%;
-  }
-  .row-offcanvas-left.active {
-    left: 41.6%;
-  }
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
 
 
 
-
-
-
-
-
-
-
-}
