--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -130,11 +130,13 @@ ul.tree li {
         line-height: 3em;
         padding:0;
         max-width: 100%;
+        text-indent: 1em;
       }
 
       label {
         line-height: 3em;
         display:block;
+        text-indent: 1em;
       }
     }
   }
