--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -1,4 +1,7 @@
 <ul class="tree">
+    <li>
+        <a href="{{ url('') }}">Overview</a>
+    </li>
     <li class="folder">
         <label>Introduction</label>
         <ul>
