--- a/_templates/default.twig
+++ b/_templates/default.twig
@@ -65,22 +65,7 @@
 
     <!-- top navbar -->
     <div id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand">
-                    <a title="Link to the Slender GitHub repository"
-                       href="https://github.com/alanpich/slender"
-                       target="_blank">Slender</a>/docs
-                </div>
-
-            </div>
-
-        </div>
+        {% include "bits/header.twig" %}
     </div>
 
     <div class="container">
@@ -93,9 +78,10 @@
 
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
-                <h1>{{ page.title }}</h1>
-                {{ page.content|raw }}
-
+                {% block page %}
+                    <h1>{{ page.title }}</h1>
+                    {{ page.content|raw }}
+                {% endblock %}
             </div>
             <!-- /.col-xs-12 main -->
         </div>
