--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -6,6 +6,7 @@
         <label>Introduction</label>
         <ul>
             <li><a href="{{ url('setup/overview.html') }}">Overview</a></li>
+            <li><a href="{{ url('setup/application-process-flow.html') }}">Process Flow</a></li>
             <li><a href="{{ url('setup/folder-structure.html') }}">Folder Structure</a></li>
             <li><a href="{{ url('setup/configuration.html') }}">Configuration</a></li>
             <li><a href="{{ url('setup/app.html') }}">Application Initialization</a></li>
@@ -34,13 +35,10 @@
 
 
     <li class="folder">
-        <label>Core Modules</label>
+        <label>Core Services</label>
         <ul>
             <li><a href="{{ url('core-modules/introduction.html') }}">Introduction</a></li>
-            <li class="folder">
-                <label>Route Registrar</label>
-                <ul><code>@TODO</code></ul>
-            </li>
+            <li><a href="{{ url('core-modules/route-registrar.html') }}">Route Registrar</a></li>
             <li class="folder">
                 <label>Service Registrar</label>
                 <ul><code>@TODO</code></ul>
