--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -32,6 +32,15 @@
             <li><a href="{{ url('modules/module-hooks.html') }}">Module Invokables</a></li>
         </ul>
     </li>
+    <li class="folder">
+        <label>RouteManager</label>
+        <ul>
+            <li><a href="{{ url('route-manager/configuration.html')}}">Configuring Routes</a></li>
+            <li><a href="{{ url('route-manager/controllers.html')}}">Controllers</a></li>
+            <li><a href="{{ url('route-manager/handling-404s.html')}}">404
+                    Handling</a></li>
+        </ul>
+    </li>
 
 
     <li class="folder">
