--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -17,8 +17,6 @@
         <ul>
             <li><a href="{{ url('configuration-loader/default-configuration.html') }}">Default Configuration</a></li>
             <li><a href="{{ url('configuration-loader/service-configuration.html') }}">Services & Factories</a></li>
-            <li><a href="{{ url('configuration-loader/route-configuration.html') }}">Route Definitions</a></li>
-            <li><a href="{{ url('configuration-loader/route-middleware.html') }}">Route Middleware</a></li>
         </ul>
     </li>
     <li class="folder">
@@ -41,24 +39,14 @@
                     Handling</a></li>
         </ul>
     </li>
-
-
     <li class="folder">
-        <label>Core Services</label>
+        <label>ServiceManager</label>
         <ul>
-            <li><a href="{{ url('core-modules/introduction.html') }}">Introduction</a></li>
-            <li><a href="{{ url('core-modules/route-registrar.html') }}">Route Registrar</a></li>
-            <li class="folder">
-                <label>Service Registrar</label>
-                <ul><code>@TODO</code></ul>
-            </li>
-            <li class="folder">
-                <label>Event Manager</label>
-                <ul><code>@TODO</code></ul>
-            </li>
+            <li><a href="">Overview</a></li>
+            <li><a href="">Dependency Injection</a></li>
+            <li><a href="">Factory Classes</a></li>
         </ul>
     </li>
-
 
 
     <script>
