--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -15,8 +15,8 @@
     <li class="folder">
         <label>Configuration Loader</label>
         <ul>
-            <li><a href="{{ url('configuration-loader/default-configuration.html') }}">Default Configuration</a></li>
-            <li><a href="{{ url('configuration-loader/service-configuration.html') }}">Services & Factories</a></li>
+            <li><a href="{{ url('configuration-loader/overview.html')}}">Overview</a></li>
+            <li><code>@TODO</code></li>
         </ul>
     </li>
     <li class="folder">
@@ -31,6 +31,16 @@
         </ul>
     </li>
     <li class="folder">
+        <label>DependencyInjector</label>
+        <ul>
+            <li>
+                <a href="{{ url('dependency-injector/automatic-dependency-injection.html')}}">
+                    Automatic Dependency Injection
+                </a>
+            </li>
+        </ul>
+    </li>
+    <li class="folder">
         <label>RouteManager</label>
         <ul>
             <li><a href="{{ url('route-manager/configuration.html')}}">Configuring Routes</a></li>
@@ -42,9 +52,7 @@
     <li class="folder">
         <label>ServiceManager</label>
         <ul>
-            <li><a href="">Overview</a></li>
-            <li><a href="">Dependency Injection</a></li>
-            <li><a href="">Factory Classes</a></li>
+            <li><a href="{{ url('service-manager/overview.html')}}">Overview</a></li>
         </ul>
     </li>
 
