--- a/example/view/home.twig
+++ b/example/view/home.twig
@@ -2,7 +2,7 @@
 
 
 {% block jumbotron %}
-    <h1>Slender Example Application</h1>
+    <h1>{{ title }}</h1>
     <h2>{{ foo }}</h2>
     <p>This is a minimal skeleton for an Slender application that works well as a starting point for building larger applications.</p>
     <p>
