--- a/_templates/bits/sidebar.twig
+++ b/_templates/bits/sidebar.twig
@@ -80,6 +80,13 @@
         </ul>
     </li>
 
+    <li class="folder">
+        <label>Asset Exposer</label>
+        <ul>
+            <li><a href="{{ url('asset-exposer/overview.html') }}">Overview</a></li>
+        </ul>
+    </li>
+
 
 </ul>
 
