extract core modules

--- a/example/module/layout/view/layout/default.twig
+++ b/example/module/layout/view/layout/default.twig
@@ -79,6 +79,7 @@
             <!-- main area -->
             <div class="col-xs-12 col-sm-9" id="page">
                 {% block page %}
+                    <a href="{{ url('docs') }}">Docs</a>
                     {% block content %}{% endblock %}
                 {% endblock %}
             </div>
